--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ style="width:100%;max-width:960px"></div>
 style="width:100%;max-width:640px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
-<img src="dinosaur.jpg">
+  
+<div><img src="dinosaur.jpg"><div>
 
 
 </body>
